ALPHA 3.0.0a4 (new core system) **IN WORKS** (not released !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!)
- FIX: event_loop/py38 on windows (Configuration of windows event loop for libraries)

ALPHA 3.0.0a3 (new core system)
- FIX: 'int'.size was wrong
- FIX: match identical request in dual mode (was wrong)

ALPHA 3.0.0a2 (new core system)
- back to aiohttp (with aio cookies) (httpx doesn't support SOCKS PROXY (which is a nogo)) ;-(
- bad if statements fails silently

ALPHA 3.0.0a1 (new core system)
- now, it's a real module (a folder in site-packages)
- now, the version is real semver
- new command (wait: <<time_in_ms>>)
- remove SELFCONF (too overbloated and not useful)
- use HTTPX again and forever ;-) (bye aiohttp)
- "proxy" support too (can be really configurable, see proxies/httpx)
- FIX: dual html -> dual status_code ;-) (not just the first)
- EVOL: new option "--f" to force full output in html rendering
- EVOL: the "resolving" mechanism is now completly new (more robust, more maintanable)
- EVOL: some little behaviour has changed :
    - some complex things (not covered in UT) should just work as expected
    - headers can't be tested directly, only thru "headers."
    - "headers contains" no more, should be explicit (use ".?" to simulate historic way)
    - tests are always resolved to false, when requests non playable
- "content contains" always here (to keep the same as historic way)
- EVOL: vars can be "ignorable" (<<var?>> will be empty if not defined), avoid ResolvingException/non playable !

2.9.1 (02/03/21)
- FIX: keep fragment of url in "reqman new" command

2.9.0 (02/03/21)
- EVOL: in rml: add "query" (dict) to build path with queryparams in an easy way
- EVOL: add GenRML() to generate rml's language string from a "request"
- FIX: exe'filename is now guessed from the os, in usage doc.

2.8.1 (27/02/21)
- FIX(better): exposed real python methods need to respect the same signature (func(x,ENV)), as pymethod declared in conf