@@ -1,5 +1,6 @@
-ALPHA 3.0.0a4 (new core system) **IN WORKS** (not released !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!)
+ALPHA 3.0.0a4 (new core system) : should be the good one !
 - FIX: event_loop/py38 on windows (Configuration of windows event loop for libraries)
+- FIX: save order is important
 
 ALPHA 3.0.0a3 (new core system)
 - FIX: 'int'.size was wrong
